# foxtrot-dev

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
Server/: CMakeLists.txt  Client.cpp  Client.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  main.cpp
ci/travis/: install-linux.sh
cmake_modules/: FindSFML.cmake
foxtrot/include/Server/: CMakeLists.txt  Client.hpp  Server.cpp
foxtrot/include/foxtrot/: Logger.hpp
foxtrot/include/foxtrot/Application/: Application.hpp  ILayer.hpp  LayerChain.hpp
foxtrot/include/foxtrot/Client/: Client.hpp
foxtrot/include/foxtrot/Event/: Event.hpp  EventManager.hpp  EventMediator.hpp
foxtrot/include/foxtrot/Event/proto/: event.pb.cc  event.pb.h  event.proto  generate.sh  header.proto
foxtrot/include/foxtrot/Event/workers/: BaseWorker.hpp  NetworkWorker.hpp
foxtrot/include/foxtrot/Server/: Server.hpp
foxtrot/include/foxtrot/Session/: Session.hpp
foxtrot/include/foxtrot/Window/: IWindow.hpp  SFMLWindow.hpp
foxtrot/include/foxtrot/WorkerPool/: WorkerPool.hpp
foxtrot/src/: Logger.cpp
foxtrot/src/Application/: Application.cpp  LayerChain.cpp
foxtrot/src/Client/: Client.cpp
foxtrot/src/Event/: EventManager.cpp
foxtrot/src/Event/workers/: NetworkWorker.cpp
foxtrot/src/Server/: Server.cpp
foxtrot/src/Session/: Session.cpp
foxtrot/src/Window/: SFMLWindow.cpp
foxtrot/src/WorkerPool/: WorkerPool.cpp
sandbox/client/: main.cpp
sandbox/include/components/: Player.hpp  Position.hpp  Sprite.hpp
sandbox/include/core/: factories.hpp
sandbox/server/: server_main.cpp
sandbox/src/: main.cpp
sandbox/src/core/: factories.cpp
